<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="design.shortnd.weatherapp.MainActivity">

    <TextView
        android:id="@+id/weather_heading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/weather"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_your_city_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_heading_text_view" />

    <Button
        android:id="@+id/search_city_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/search_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_city_edit_text" />

    <ImageView
        android:id="@+id/sunny_image_view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/sunny_image"
        app:layout_constraintEnd_toStartOf="@+id/umbrella_image_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/umbrella_image_view"
        app:srcCompat="@drawable/ic_sunny" />

    <ImageView
        android:id="@+id/umbrella_image_view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/umbrella_image"
        app:layout_constraintEnd_toStartOf="@+id/cold_temperature_image_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sunny_image_view"
        app:layout_constraintTop_toBottomOf="@+id/search_city_button"
        app:srcCompat="@drawable/ic_umbrellas" />

    <ImageView
        android:id="@+id/cold_temperature_image_view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/cold_temperature_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/umbrella_image_view"
        app:layout_constraintTop_toTopOf="@+id/umbrella_image_view"
        app:srcCompat="@drawable/ic_cold_temperature" />


</android.support.constraint.ConstraintLayout>
